# GTA4Recomp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
GTA4Recomp/: CMakeLists.txt  README.md  app.cpp  app.h  decompressor.h  exports.cpp  exports.h  framework.h  main.cpp  stdafx.h  version.cpp
GTA4Recomp/api/: Fernando.h  Fernando.inl  d3dxb.h
GTA4Recomp/api/RAGE/: RAGE.h  RAGE.inl
GTA4Recomp/api/boost/smart_ptr/: make_shared_object.h  shared_prt.h
GTA4Recomp/api/hk330/: hkArray.h  hkReferencedObject.h  hkpBroadPhaseHandle.h  hkpCdBody.h  hkpCollidable.h  hkpCollidableCollidableFilter.h  hkpCollisionFilter.h  hkpEntity.h  hkpLinkedCollidable.h  hkpPhantom.h  hkpProperty.h  hkpRayCollidableFilter.h  hkpRayShapeCollectionFilter.h  hkpRigidBody.h  hkpShape.h  hkpShapeCollectionFilter.h  hkpTypedBroadPhaseHandle.h  hkpWorld.h  hkpWorldObject.h
GTA4Recomp/api/stdx/: string.h  wstring.h
GTA4Recomp/apu/driver/: sdl2_driver.cpp
GTA4Recomp/cpu/: guest_stack_var.h  guest_thread.cpp  guest_thread.h  ppc_context.h
GTA4Recomp/gpu/: video.cpp  video.h
GTA4Recomp/hid/: hid.h  mouse_camera.cpp  mouse_camera.h
GTA4Recomp/install/: directory_file_system.h  installer.cpp  installer.h  update_checker.cpp
GTA4Recomp/install/hashes/: game.cpp  game.h
GTA4Recomp/install/xbox360/: stfs_parser.cpp  stfs_parser.h  title_update_manager.cpp  title_update_manager.h  xex_patcher.cpp  xex_patcher.h
GTA4Recomp/kernel/: README.md  function.h  game_init.cpp  game_init.h  heap.cpp  imports.cpp  memory.cpp  memory.h  vfs.cpp  vfs.h  xam.cpp  xam.h  xenon_memory.cpp  xenon_memory.h
GTA4Recomp/kernel/io/: file_system.cpp
GTA4Recomp/locale/: config_locale.cpp  locale.cpp  locale.h
GTA4Recomp/mod/: mod_loader.cpp  mod_loader.h
GTA4Recomp/os/linux/: version_linux.cpp
GTA4Recomp/patches/: MainMenuTask_patches.cpp  MainMenuTask_patches.h  SaveDataTask_patches.cpp  TitleTask_patches.cpp  aspect_ratio_patches.cpp  audio_patches.cpp  camera_patches.cpp  fps_patches.cpp  gta4_aspect_ratio_patches.cpp  gta4_input_patches.cpp  gta4_input_patches.h  gta4_patches.cpp  gta4_patches.h  input_patches.cpp  loading_patches.cpp  misc_patches.cpp  patches.h  pause_patches.cpp  player_patches.cpp  video_patches.cpp
GTA4Recomp/res/win32/: res.rc.template
GTA4Recomp/ui/: achievement_overlay.cpp  achievement_overlay.h  achievment_menu.cpp  achievment_menu.h  black_bar.cpp  black_bar.h  button_window.cpp  button_window.h  common_menu.cpp  common_menu.h  fader.cpp  fader.h  game_window.cpp  game_window.h  gamestyle.h  imgui_utils.cpp  imgui_utils.h  installer_wizard.cpp  installer_wizard.h  message_window.cpp  message_window_stub.cpp  message_wizard.h  options_menu.cpp  options_menu.h  options_menu_stub.h
GTA4Recomp/user/: achievement_data.cpp  achievement_data.h  achievment_manager.cpp  achievment_manager.h  config.cpp  config.h  config_def.h  paths.cpp  paths.h  registry.cpp  registry.h
GTA4Recomp/utils/: ring_buffer.cpp  ring_buffer.h
GTA4RecompLib/: CMakeLists.txt
GTA4RecompLib/config/: config.toml  gta4.toml
GTA4RecompResources/images/common/: GTA4Recomp.dds  arrow.dds  button_window.dds  controller.dds  main_menu1.dds  main_menu7.dds  main_menu8.dds  main_menu9.dds  sonicnext-dev.dds
GTA4RecompResources/images/installer/: gta4_logo.dds  install_001.dds  install_002.dds  install_003.dds  install_004.dds  install_005.dds  install_006.dds  install_007.dds  install_008.dds
docs/: CHANGES.md  SOURCES.md
tools/: CMakeLists.txt
tools/x_decompress/: CMakeLists.txt
